gobmkida/c3/accuratelib
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2301:27: error: use of undeclared identifier 'dword_A9019C'
if ( !byte_9C689F[v21] && dword_A9019C[v21] != v8 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2301:7: error: use of undeclared identifier 'byte_9C689F'
if ( !byte_9C689F[v21] && dword_A9019C[v21] != v8 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2306:1: error: use of undeclared identifier 'dword_A9019C'
dword_A9019C[v21] = v8; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2308:7: error: use of undeclared identifier 'byte_9C688C'
if ( !byte_9C688C[v21] && string_number[v21 + 384] != v8 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2336:27: error: use of undeclared identifier 'dword_A9019C'
if ( !byte_9C689F[v26] && dword_A9019C[v26] != v8 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2336:7: error: use of undeclared identifier 'byte_9C689F'
if ( !byte_9C689F[v26] && dword_A9019C[v26] != v8 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2340:1: error: use of undeclared identifier 'dword_A9019C'
dword_A9019C[v26] = v8; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2342:7: error: use of undeclared identifier 'byte_9C688C'
if ( !byte_9C688C[v26] && string_number[v26 + 384] != v8 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2373:24: error: use of undeclared identifier 'byte_9C689F'
&& ( ( unsigned __int8)byte_9C689F[v31] != color || string[string[239].neighborlist[v31 + 160]].mark != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2374:24: error: use of undeclared identifier 'byte_9C688C'
&& ( ( unsigned __int8)byte_9C688C[v31] != color || string[string[239].neighborlist[v31 + 141]].mark != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2392:22: error: use of undeclared identifier 'byte_9C689F'
|| ( unsigned __int8)byte_9C689F[v34] == color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2394:22: error: use of undeclared identifier 'byte_9C688C'
|| ( unsigned __int8)byte_9C688C[v34] == color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2411:24: error: use of undeclared identifier 'byte_9C689F'
&& ( ( unsigned __int8)byte_9C689F[v35] != color 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/engine/board.c:2413:24: error: use of undeclared identifier 'byte_9C688C'
&& ( ( unsigned __int8)byte_9C688C[v35] != color 
                       ^
14 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/accuratelib/src/obj/1/board.o] Error 1
